--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/react-dom": "16.8.0",
     "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
+    "firebase": "^5.8.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-firebaseui": "^3.1.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
