--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "16.8.0",
     "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
+    "@types/styled-components": "^4.1.8",
     "evergreen-ui": "^4.11.3",
     "firebase": "^5.8.2",
     "react": "^16.8.1",
