--- a/package.json
+++ b/package.json
@@ -1,35 +1,21 @@
 {
-  "name": "jobportfolio",
-  "version": "0.1.0",
+  "name": "react-firebase-authentication",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
-    "@types/jest": "24.0.0",
-    "@types/node": "10.12.23",
-    "@types/react": "16.8.2",
-    "@types/react-dom": "16.8.0",
-    "@types/react-router": "^4.4.3",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/styled-components": "^4.1.8",
     "evergreen-ui": "^4.11.3",
-    "firebase": "^5.8.2",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "react-firebaseui": "^3.1.2",
-    "react-router": "^4.3.1",
+    "firebase": "^5.6.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
-    "styled-components": "^4.1.3",
-    "typescript": "3.3.3"
+    "react-scripts": "2.1.1",
+    "recompose": "^0.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom --passWithNoTests",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": [
     ">0.2%",
